# glshaderpp

./: .dockerignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  Dockerfile  InstallInBuild.ps1  Readme.md  conanfile.in  upload-release.ps1
GLShaderPP/: CMakeLists.txt  Shader.cpp  ShaderProgram.cpp
GLShaderPP/public/GLShaderPP/: Shader.h  ShaderException.h  ShaderProgram.h
test/: CMakeLists.txt  conanfile.txt  test.cpp  vertex.vert
test/dataset/: test.ppm
test/shaders/: fragment.frag  vertex.vert
testbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  GLShaderPP.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanbuildinfo_debug.cmake  conanbuildinfo_multi.cmake  conanbuildinfo_release.cmake  conaninfo.txt  graph_info.json
testbuild/GLShaderPP/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  libGLShaderPP.sln
testbuild/test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  testProg.sln  testProg.vcxproj  testProg.vcxproj.filters
